Fix color of security icons in dark mode
--color-text-disabled was suggested by petermueller@ on the bug.

Fixed: 1229940
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/3034610
Commit-Queue: Jack Franklin <jacktfranklin@chromium.org>
Commit-Queue: Tim van der Lippe <tvanderlippe@chromium.org>
Auto-Submit: Jack Franklin <jacktfranklin@chromium.org>

--- a/front_end/panels/security/mainView.css
+++ b/front_end/panels/security/mainView.css
@@ -47,8 +47,7 @@
 .security-summary:not(.security-summary-neutral) .lock-icon-neutral,
 .security-summary:not(.security-summary-insecure) .lock-icon-insecure,
 .security-summary:not(.security-summary-insecure-broken) .lock-icon-insecure-broken {
-  background-color: rgb(90 90 90 / 25%); /* stylelint-disable-line plugin/use_theme_colors */
-  /* See: crbug.com/1152736 for color variable migration. */
+  background-color: var(--color-text-disabled);
 }
 
 @media (forced-colors: active) {
